--- a/src/App.css
+++ b/src/App.css
@@ -2,35 +2,35 @@
   font-family: "TheJamsil5";
   font-style: normal;
   font-weight: 100;
-  src: url("../src/assets/fonts/The\ Jamsil\ 1\ Thin.ttf") format("woff2");
+  src: url("assets/quack.image/fonts/TheJamsil1Thin.ttf") format("woff2");
 }
 @font-face {
   font-family: "TheJamsil5";
   font-style: normal;
   font-weight: 300;
-  src: url("../src/assets/fonts/The\ Jamsil\ 2\ Light.ttf") format("woff2");
+  src: url("assets/quack.image/fonts/TheJamsil2Light.ttf") format("woff2");
 }
 @font-face {
   font-family: "TheJamsil5";
   font-style: normal;
   font-weight: 400;
-  src: url("../src/assets/fonts/The\ Jamsil\ 3\ Regular.ttf") format("woff2");
+  src: url("assets/quack.image/fonts/TheJamsil3Regular.ttf") format("woff2");
 }
 @font-face {
   font-family: "TheJamsil5";
   font-style: normal;
   font-weight: 500;
-  src: url("../src/assets/fonts/The\ Jamsil\ 4\ Medium.ttf") format("woff2");
+  src: url("assets/quack.image/fonts/TheJamsil4Medium.ttf") format("woff2");
 }
 @font-face {
   font-family: "TheJamsil5";
   font-style: normal;
   font-weight: 700;
-  src: url("../src/assets/fonts/The\ Jamsil\ 5\ Bold.ttf") format("woff2");
+  src: url("assets/quack.image/fonts/TheJamsil5Bold.ttf") format("woff2");
 }
 @font-face {
   font-family: "TheJamsil5";
   font-style: normal;
   font-weight: 800;
-  src: url("../src/assets/fonts/The\ Jamsil\ 6\ ExtraBold.ttf") format("woff2");
+  src: url("assets/quack.image/fonts/TheJamsil6ExtraBold.ttf") format("woff2");
 }
